--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
     <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">-->
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/docs/5.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <title> Layout3</title>
 </head>
 <body>
@@ -36,7 +35,7 @@
                 
            </div>
     </header>
-    <div class="feedback">
+   <feedback>
         <div class="modal fade" id="feedbackModal" tabindex="-1" role="dialog" aria-labelledby="feedbackModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-dialog">
@@ -46,35 +45,35 @@
                     </button>
                 </div>
             <div class="modal-content">
-                <form class="feedback__form">
+                <form class="feedback__form" id="feedback">
                             <div class="modal-top">  <!--Пишу top/main/bottom бо якщо писати через header/body/footer то з'являється непотрібно розділяюча горизонтальна лінія яку я не можу прибрати-->
                                 <h5 class="modal-title" id="feedbackModalLabel" class="feedback__title"><b>ЗВОРОТНІЙ ЗВ'ЯЗОК</b></h5>
                             </div>
                             <div class="modal-main">
                                <div class="form-group__feedback__form-group">
-                                   <label for="username" class="feedback__label">Ваше ім'я *</label>
+                                   <label for="username" class="feedback__label"> Ваше ім'я *</label>
                                    <input type="text" id="name" name="name" class="form-control feedback__input" required>
                                </div>
                                <div class="form-group__feedback__form-group">
-                                   <label for="phone" class="feedback__label">Телефон *</label>
+                                   <label for="phone" class="feedback__label"> Телефон *</label>
                                    <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" class="form-control feedback__input" required>
                                </div>
                                <div class="form-group__feedback__form-group">
-                                   <label for="email" class="feedback__label">Email *</label>
+                                   <label for="email" class="feedback__label"> Email *</label>
                                    <input type="email" id="email" name="email" class="form-control feedback__input" required>
                                </div>
                                <div class="form-group__feedback__form-group">
                                    <label for="password" class="feedback__label">Повідомлення</label>
                                    <textarea id="message" name="message" rows="6" class="form-control feedback__textarea"></textarea>
                                </div>
-                        </div>
+                          </div>
                         
-                           <div class="modal-bottom">
+                           <div class="modal-bottom" id="modal-bottom-send">
                                <div class="submit">
-                                   <button type="submit" class="btn__feedback__submit">Відправити</button>
-                                   </div>
+                                   <button type="submit" class="btn__feedback__submit"><b>ВІДПРАВИТИ</b></button>
+                                </div>
                            </div>
-                       </form> 
+                </form> 
             </div>
             <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
             <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
@@ -83,7 +82,7 @@
         </div>
         </div>
         </div>
-        </div>
+    </feedback>
 </body>
 </html>
 
