--- a/index.html
+++ b/index.html
@@ -17,25 +17,24 @@
                     <img src="/images/logo.png" alt="Website Logo" width="100" height="100">
                 </div>
             </a>
-                <div class="header-container__company-name">
+             <div class="header-container__company-name">
                     <h1><b>Назва<br>компанії</b></h1>
                     <p>сама кльова компанія</p>
-                </div>
-                <div class="header-container__feedback">
-                    <ul class="header-container__phone-numbers">
-                            <li><a href="tel:+38499777777">+38(499) 777-77-77</a></li>
-                            <li><a href="tel:+38499777777">+38(499) 777-77-77</a></li>
-                    </ul>  
-                    <div class="header-container__feedback-button-container">
-                    <button class="header-container__feedback-button" data-toggle="modal" data-target="#feedbackModal">
-                        <b>Зворотній зв'язок</b>
-                    </button>
-                    </div>
-                </div>
-                
-           </div>
+             </div>
+            <div class="header-container__feedback">
+                 <ul class="header-container__phone-numbers">
+                     <li><a href="tel:+38499777777">+38(499) 777-77-77</a></li>
+                     <li><a href="tel:+38499777777">+38(499) 777-77-77</a></li>
+                </ul>  
+             <div class="header-container__feedback-button-container">
+                 <button class="header-container__feedback-button" data-toggle="modal" data-target="#feedbackModal">
+                    <b>Зворотній зв'язок</b>
+                </button>
+            </div>
+            </div>
+            </div>
     </header>
-   <feedback>
+    <feedback>
         <div class="modal fade" id="feedbackModal" tabindex="-1" role="dialog" aria-labelledby="feedbackModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-dialog">
@@ -46,7 +45,7 @@
                 </div>
             <div class="modal-content">
                 <form class="feedback__form" id="feedback">
-                            <div class="modal-top">  <!--Пишу top/main/bottom бо якщо писати через header/body/footer то з'являється непотрібно розділяюча горизонтальна лінія яку я не можу прибрати-->
+                            <div class="modal-top">  
                                 <h5 class="modal-title" id="feedbackModalLabel" class="feedback__title"><b>ЗВОРОТНІЙ ЗВ'ЯЗОК</b></h5>
                             </div>
                             <div class="modal-main">
@@ -77,7 +76,8 @@
             </div>
             <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
             <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-            <script type="text/javascript">    
+            <script type="text/javascript">
+                
             </script>
         </div>
         </div>
