--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">-->
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+     <script src="script.js"></script>
     <title> Layout3</title>
 </head>
 <body>
@@ -44,7 +44,7 @@
                     </button>
                 </div>
             <div class="modal-content">
-                <form class="feedback__form" id="feedback">
+                <form class="feedback__form" id="feedback" novalidate>
                             <div class="modal-top">  
                                 <h5 class="modal-title" id="feedbackModalLabel" class="feedback__title"><b>ЗВОРОТНІЙ ЗВ'ЯЗОК</b></h5>
                             </div>
@@ -52,33 +52,32 @@
                                <div class="form-group__feedback__form-group">
                                    <label for="username" class="feedback__label"> Ваше ім'я *</label>
                                    <input type="text" id="name" name="name" class="form-control feedback__input" required>
+                                   <div class="error-message" id="name-error"></div>
                                </div>
                                <div class="form-group__feedback__form-group">
                                    <label for="phone" class="feedback__label"> Телефон *</label>
                                    <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" class="form-control feedback__input" required>
+                                   <div class="error-message" id="phone-error"></div>
                                </div>
                                <div class="form-group__feedback__form-group">
                                    <label for="email" class="feedback__label"> Email *</label>
                                    <input type="email" id="email" name="email" class="form-control feedback__input" required>
+                                   <div class="error-message" id="email-error"></div>
                                </div>
                                <div class="form-group__feedback__form-group">
                                    <label for="password" class="feedback__label">Повідомлення</label>
                                    <textarea id="message" name="message" rows="6" class="form-control feedback__textarea"></textarea>
                                </div>
                           </div>
-                        
-                           <div class="modal-bottom" id="modal-bottom-send">
-                               <div class="submit">
-                                   <button type="submit" class="btn__feedback__submit"><b>ВІДПРАВИТИ</b></button>
-                                </div>
-                           </div>
+                          <div class="modal-bottom" id="modal-bottom-send">
+                              <div class="submit">
+                                  <button type="submit" class="btn__feedback__submit"><b>ВІДПРАВИТИ</b></button>
+                              </div>
+                          </div>
                 </form> 
             </div>
             <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
             <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-            <script type="text/javascript">
-                
-            </script>
         </div>
         </div>
         </div>
