Файли з шрифтами та зображеннями помвстила в папки. Створила навігаційне меню для десктопа і бургер меню для мобайлу.

--- a/index.html
+++ b/index.html
@@ -82,6 +82,32 @@
         </div>
         </div>
     </feedback>
+    <div class="menu-container">
+        <!-- Звичайне меню для десктопних пристроїв -->
+        <div class="menu__desktop-menu">
+            <a href="#" class="desktop-menu-item"> Головна  | </a>
+            <a href="#" class="desktop-menu-item"> Каталог  | </a>
+            <a href="#" class="desktop-menu-item"> Доставка і оплата  | </a>
+            <a href="#" class="desktop-menu-item"> Прайс-лист  | </a>
+            <a href="#" class="desktop-menu-item"> Контакти   </a>
+        </div>
+        <div class="hamburger-menu">
+            <input id="menu__toggle" type="checkbox" />
+            <label class="menu__btn" for="menu__toggle">
+              <span></span>
+            </label>
+             <!-- Бургер меню для мобільних пристроїв -->
+        <ul class="menu mobile-menu">
+            <li><a href="#" class="menu-item">Головна</a></li>
+            <li><a href="#" class="menu-item">Каталог</a></li>
+            <li><a href="#" class="menu-item">Доставка і оплата</a></li>
+            <li><a href="#" class="menu-item">Прайс-лист</a></li>
+            <li><a href="#" class="menu-item">Контакти</a></li>
+        </ul>
+    </div>
+    </div>
+    </div>
+    
 </body>
 </html>
 
