Створила слайдер. Винесла js стилі з html в script.js.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Layout3</title>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
-     <script src="script.js"></script>
-    <title> Layout3</title>
-</head>
+    <script src="script.js"></script>
+     <!-- Добавляем стили из CDN -->
+     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
+     <!-- Добавляем тему по умолчанию из CDN -->
+     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
+    </head>
 <body>
     <header>
         <div class="header-container">
@@ -24,7 +28,7 @@
             <div class="header-container__feedback">
                  <ul class="header-container__phone-numbers">
                      <li><a href="tel:+38499777777">+38(499) 777-77-77</a></li>
-                     <li><a href="tel:+38499777777">+38(499) 777-77-77</a></li>
+                     <li><a href="tel:+38499777777">+38(499) 777-77-77</a></li> 
                 </ul>  
              <div class="header-container__feedback-button-container">
                  <button class="header-container__feedback-button" data-toggle="modal" data-target="#feedbackModal">
@@ -106,8 +110,29 @@
         </ul>
     </div>
     </div>
+    <div class="slider-box">
+        <div class="content-slider">
+            <div class="slider single-item">
+                <div>
+                    <img src="/images/slider.png" alt="Slider" width="1400">
+                </div>
+                <div>
+                    <img src="/images/slider2.jpg" alt="Slider2" width="1400">
+                </div>
+                <div>
+                    <img src="/images/slider3.jpg" alt="Slider3" width="1400">
+                </div>
+                <div>
+                    <img src="/images/slider4.png" alt="Slider4" width="1400">
+              </div>
+            </div>
+        </div>
     </div>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     
-</body>
+    </body>
 </html>
 
