--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
      <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
      <!-- Добавляем тему по умолчанию из CDN -->
      <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     </head>
 <body>
     <header>
         <div class="header-container">
             <a href="https://internetdevels.ua/" target="_blank">
                 <div class="header-container__logo">
-                    <img src="/images/logo.png" alt="Website Logo" width="100" height="100">
+                    <img src="images/logo.png" alt="Website Logo" width="100" height="100">
                 </div>
             </a>
              <div class="header-container__company-name">
@@ -114,25 +115,126 @@
         <div class="content-slider">
             <div class="slider single-item">
                 <div>
-                    <img src="/images/slider.png" alt="Slider" width="1400">
+                    <img src="images/slider.png" alt="Slider" width="1400">
                 </div>
                 <div>
-                    <img src="/images/slider2.jpg" alt="Slider2" width="1400">
+                    <img src="images/slider2.jpg" alt="Slider2" width="1400">
                 </div>
                 <div>
-                    <img src="/images/slider3.jpg" alt="Slider3" width="1400">
+                    <img src="images/slider3.jpg" alt="Slider3" width="1400">
                 </div>
                 <div>
-                    <img src="/images/slider4.png" alt="Slider4" width="1400">
+                    <img src="images/slider4.png" alt="Slider4" width="1400">
               </div>
             </div>
         </div>
     </div>
+    <main>
+        <div class="content">
+            <div class="container-fluid">
+                <div class="container-left">
+                    <section class="categories row">
+                                    <div class="categories-menu">
+                            <nav class="categories">
+                            <ul>
+                                <li>
+                                    <a href="#">Автомобілі</a>
+                                </li>
+                                <li class="active">
+                                    <a href="#">Побутова техніка</a>
+                                    <ul class="sub-categories">
+                                        <li><a href="#">Мікрохвильовки</a></li>
+                                        <li><a href="#">Холодильники</a></li>    
+                                        <li><a href="#">Посудомийки</a></li> 
+                                        <li><a href="#">Чайники</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="#">Мобільна техніка</a>
+                                </li>
+                                <li>
+                                    <a href="#">Комп'ютери</a>
+                                </li>
+                                <li>
+                                    <a href="#">Одяг</a>
+                                </li>
+                                <li>
+                                    <a href="#">Нерухомість</a>
+                                </li>
+                            </ul>
+                        </nav>
+                        </div>
+                        </div>
+                    </section>
+            <div class="items-boxes">
+                <div class="item-box"> 
+                    <figure>
+                        <img src="images/item.png" alt="item-image">
+                        <figcaption>
+                          <p>Самий кльовий чайник який необхідно купити!</p>
+                          <p><span>1 900 грн.</span></p>
+                          <span class="material-symbols-outlined">
+                            shopping_cart
+                         </span>
+                        </figcaption>
+                    </figure>
+                </div>   
+                <div class="item-box"> 
+                    <figure>
+                        <img src="images/item.png" alt="item-image">
+                        <figcaption>
+                          <p>Самий кльовий чайник який необхідно купити!</p>
+                          <p><span>1 900 грн.</span></p>
+                          <span class="material-symbols-outlined">
+                            shopping_cart
+                         </span>
+                        </figcaption>
+                    </figure>
+                </div>
+                <div class="item-box"> 
+                    <figure>
+                        <img src="images/item.png" alt="item-image">
+                        <figcaption>
+                          <p>Самий кльовий чайник який необхідно купити!</p>
+                          <p><span>1 900 грн.</span></p>
+                          <span class="material-symbols-outlined">
+                            shopping_cart
+                         </span>
+                        </figcaption>
+                    </figure>
+                </div> 
+                <div class="item-box"> 
+                    <figure>
+                        <img src="images/item.png" alt="item-image">
+                        <figcaption>
+                          <p>Самий кльовий чайник який необхідно купити!</p>
+                          <p><span>1 900 грн.</span></p>
+                          <span class="material-symbols-outlined">
+                            shopping_cart
+                         </span>
+                        </figcaption>
+                    </figure>
+                </div>  
+                <div class="item-box"> 
+                    <figure>
+                        <img src="images/item.png" alt="item-image">
+                        <figcaption>
+                          <p>Самий кльовий чайник який необхідно купити!</p>
+                          <p><span>1 900 грн.</span></p>
+                          <span class="material-symbols-outlined">
+                            shopping_cart
+                         </span>
+                        </figcaption>
+                    </figure>
+                </div>    
+            </div>
+            </div>
+        </div>
+    </main>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    
     </body>
 </html>
 
