Створила каталог та список категорій. Адаптив допрацюю разом з футером.

--- a/index.html
+++ b/index.html
@@ -171,62 +171,62 @@
                     <figure>
                         <img src="images/item.png" alt="item-image">
                         <figcaption>
-                          <p>Самий кльовий чайник який необхідно купити!</p>
-                          <p><span>1 900 грн.</span></p>
-                          <span class="material-symbols-outlined">
-                            shopping_cart
-                         </span>
-                        </figcaption>
-                    </figure>
-                </div>   
-                <div class="item-box"> 
-                    <figure>
-                        <img src="images/item.png" alt="item-image">
-                        <figcaption>
-                          <p>Самий кльовий чайник який необхідно купити!</p>
-                          <p><span>1 900 грн.</span></p>
-                          <span class="material-symbols-outlined">
-                            shopping_cart
-                         </span>
-                        </figcaption>
+                          <p class="figcaption-title">Самий кльовий чайник який необхідно купити!</p>
+                          <div class="figcaption-title-price">
+                          <span class="material-symbols-outlined">shopping_cart</span>
+                          <p class="figcaption-price">1 900 грн.</p>
+                        </div>
+                    </figcaption>
                     </figure>
                 </div>
                 <div class="item-box"> 
                     <figure>
                         <img src="images/item.png" alt="item-image">
                         <figcaption>
-                          <p>Самий кльовий чайник який необхідно купити!</p>
-                          <p><span>1 900 грн.</span></p>
-                          <span class="material-symbols-outlined">
-                            shopping_cart
-                         </span>
-                        </figcaption>
+                          <p class="figcaption-title">Самий кльовий чайник який необхідно купити!</p>
+                          <div class="figcaption-title-price">
+                          <span class="material-symbols-outlined">shopping_cart</span>
+                          <p class="figcaption-price">1 900 грн.</p>
+                        </div>
+                    </figcaption>
                     </figure>
-                </div> 
+                </div>
                 <div class="item-box"> 
                     <figure>
                         <img src="images/item.png" alt="item-image">
                         <figcaption>
-                          <p>Самий кльовий чайник який необхідно купити!</p>
-                          <p><span>1 900 грн.</span></p>
-                          <span class="material-symbols-outlined">
-                            shopping_cart
-                         </span>
-                        </figcaption>
+                          <p class="figcaption-title">Самий кльовий чайник який необхідно купити!</p>
+                          <div class="figcaption-title-price">
+                          <span class="material-symbols-outlined">shopping_cart</span>
+                          <p class="figcaption-price">1 900 грн.</p>
+                        </div>
+                    </figcaption>
                     </figure>
-                </div>  
+                </div>
                 <div class="item-box"> 
                     <figure>
                         <img src="images/item.png" alt="item-image">
                         <figcaption>
-                          <p>Самий кльовий чайник який необхідно купити!</p>
-                          <p><span>1 900 грн.</span></p>
-                          <span class="material-symbols-outlined">
-                            shopping_cart
-                         </span>
-                        </figcaption>
+                          <p class="figcaption-title">Самий кльовий чайник який необхідно купити!</p>
+                          <div class="figcaption-title-price">
+                          <span class="material-symbols-outlined">shopping_cart</span>
+                          <p class="figcaption-price">1 900 грн.</p>
+                        </div>
+                    </figcaption>
                     </figure>
-                </div>    
+                </div>
+                <div class="item-box"> 
+                    <figure>
+                        <img src="images/item.png" alt="item-image">
+                        <figcaption>
+                          <p class="figcaption-title">Самий кльовий чайник який необхідно купити!</p>
+                          <div class="figcaption-title-price">
+                          <span class="material-symbols-outlined">shopping_cart</span>
+                          <p class="figcaption-price">1 900 грн.</p>
+                        </div>
+                    </figcaption>
+                    </figure>
+                </div>
             </div>
             </div>
         </div>
