Додала та застилізувала зображення і підпис до "Прайс-листу"

--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
         <div class="content">
             <div class="container-fluid">
                 <div class="container-left">
-                    <section class="categories row">
-                                    <div class="categories-menu">
+                            <div class="categories-menu">
                             <nav class="categories">
                             <ul>
                                 <li>
@@ -164,8 +163,13 @@
                             </ul>
                         </nav>
                         </div>
+                        <div class="logo-x">
+                            <img src="images/logo-x.jpg" alt="Logo-X" width:100 height:100>
+                        <div class="logo-x-caption">
+                            <p><b>Прайс-лист</b></p>
                         </div>
-                    </section>
+                        </div>
+                    </div>
             <div class="items-boxes">
                 <div class="item-box"> 
                     <figure>
