Додала футер та блок з текстом в контенті.

--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
         </div>
         </div>
     </feedback>
-    <div class="menu-container">
-        <!-- Звичайне меню для десктопних пристроїв -->
+   <div class="menu-container">
         <div class="menu__desktop-menu">
             <a href="#" class="desktop-menu-item"> Головна  | </a>
             <a href="#" class="desktop-menu-item"> Каталог  | </a>
@@ -101,7 +100,6 @@
             <label class="menu__btn" for="menu__toggle">
               <span></span>
             </label>
-             <!-- Бургер меню для мобільних пристроїв -->
         <ul class="menu mobile-menu">
             <li><a href="#" class="menu-item">Головна</a></li>
             <li><a href="#" class="menu-item">Каталог</a></li>
@@ -109,29 +107,32 @@
             <li><a href="#" class="menu-item">Прайс-лист</a></li>
             <li><a href="#" class="menu-item">Контакти</a></li>
         </ul>
-    </div>
+        </div>
     </div>
     <div class="slider-box">
         <div class="content-slider">
             <div class="slider single-item">
                 <div>
-                    <img src="images/slider.png" alt="Slider" width="1400">
+                    <img src="images/slider.png" alt="Slider" width="1400" height="=400">
                 </div>
                 <div>
-                    <img src="images/slider2.jpg" alt="Slider2" width="1400">
+                    <img src="images/slider2.jpg" alt="Slider2" width="1400"height="=400">
                 </div>
                 <div>
-                    <img src="images/slider3.jpg" alt="Slider3" width="1400">
+                    <img src="images/slider3.jpg" alt="Slider3" width="1400"height="=400">
                 </div>
                 <div>
-                    <img src="images/slider4.png" alt="Slider4" width="1400">
+                    <img src="images/slider4.png" alt="Slider4" width="1400"height="=400">
               </div>
             </div>
         </div>
     </div>
     <main>
         <div class="content">
-            <div class="container-fluid">
+             <div class="cat-breadcrumbs">
+                    <a href="#">Головна /</a> <a href="#">Каталог /</a> <a href="#">Побутова техніка</a>
+                </div>
+                <div class="container-fluid">
                 <div class="container-left">
                             <div class="categories-menu">
                             <nav class="categories">
@@ -233,8 +234,43 @@
                 </div>
             </div>
             </div>
-        </div>
+            <div class="main-info">
+                <div class="main-info-blocks">
+                    <div class="main-info__left-txt-block">
+                        <p>Компанія «Піксель Плюс» існує більше 6 років, за цей час ми брали участь у розробці понад 700 сайтів, тому впевнено можемо називати себе професіоналами. На даний момент наш колектив складається з понад 30 співробітників, які працюють у двох офісах у Києві та Харків. характерні для цього жанру мотиви: нерозділеної любові, уходу молодості, угасання душі.</p>
+                    </div>
+                    <div class="main-info__right-txt-block">
+                        <p>Одним із основних напрямків роботи нашої компанії є пошукове просування сайтів, на даний момент ми працюємо з понад 150 постійними клієнтами за понад 11 000 пошуковими запитами.  При цьому в роботі основний акцент ми робимо на качестве роботи, а так же застосовуємо власні унікальні розробки в області ЅЕО просування.  На даний момент відділ SEO складається з 9 осіб під керівництвом ведучого фахівця, переважно працюють їх в нашому києвському офісі.</p>
+                    </div>
+                </div>
+            </div>
+            </div>
     </main>
+    <footer>
+        <div class="container-footer">
+            <div class="footer-content">
+                <div class="footer-info">
+                    <p>© 2012-2013 ЗАТ "Компанія" <br>
+                    info@name.ua</p>
+                    </div>
+            <div class="footer-menu">
+                <ul>
+                    <li><a href="#" class="foot-menu-item">Головна</a></li>
+                    <li><a href="#" class="foot-menu-item">Каталог</a></li>
+                    <li><a href="#" class="foot-menu-item">Доставка і оплата</a></li>
+                    <li><a href="#" class="foot-menu-item">Прайс-лист</a></li>
+                    <li><a href="#" class="foot-menu-item">Контакти</a></li>
+                </ul>
+            </div>
+                <div class="footer-logo">
+                    <img src="images/logo-footer.png" alt="Logo" width="50px" height="50px">
+                </div>
+                <div class="prod">
+                    <p> Розробка сайту -<br>компанія "Піксель Плюс" </p>
+                </div>
+           </div>
+        </div>
+   </footer>
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
