--- a/index.html
+++ b/index.html
@@ -111,17 +111,17 @@
     </div>
     <div class="slider-box">
         <div class="content-slider">
-            <div class="slider single-item">
-                <div>
+            <div class="slider">
+                <div class="slider-item">
                     <img src="images/slider.png" alt="Slider" width="1400" height="=400">
                 </div>
-                <div>
+                <div class="slider-item">
                     <img src="images/slider2.jpg" alt="Slider2" width="1400"height="=400">
                 </div>
-                <div>
+                <div class="slider-item">
                     <img src="images/slider3.jpg" alt="Slider3" width="1400"height="=400">
                 </div>
-                <div>
+                <div class="slider-item">
                     <img src="images/slider4.png" alt="Slider4" width="1400"height="=400">
               </div>
             </div>
